Footer z-index corrected to show above content

--- a/src/components/footer.scss
+++ b/src/components/footer.scss
@@ -36,6 +36,7 @@
     text-align: start;
     margin-left: 1.5em;
     padding-bottom: 0.2em;
+    z-index: 100;
   }
 
   .icons-container {
